--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,8 @@
 version: '2'
 
+# Copy default.env to .env and change passwords.
+
 services:
-  db:
-    container_name: tmi_cloud_data
-    image: mariadb
-    command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW
-    restart: always
-    volumes:
-      - ./local/data:/var/lib/mysql
-    environment:
-      - MYSQL_ROOT_PASSWORD=change_me
-      - MYSQL_PASSWORD=change_me
-      - MYSQL_DATABASE=nextcloud
-      - MYSQL_USER=nextcloud
 
   app:
     container_name: tmi_cloud
@@ -24,3 +14,11 @@ services:
     volumes:
       - ./local/nextcloud:/var/www/html
     restart: always
+
+  db:
+    container_name: tmi_cloud_data
+    image: mariadb
+    command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW
+    restart: always
+    volumes:
+      - ./local/data:/var/lib/mysql
