--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ version: '2'
 
 services:
 
-  app:
+  cloud:
     container_name: tmi_cloud
     image: nextcloud
     restart: always
@@ -22,3 +22,15 @@ services:
     command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW
     volumes:
       - ./local/data:/var/lib/mysql
+
+  admin:
+    container_name: tmi_access_token_admin
+    image: osixia/phpldapadmin:0.9.0
+    restart: always
+    ports:
+      - '11020:80'
+      - '11025:443'
+    depends_on:
+      - db
+    environment:
+      - PHPLDAPADMIN_LDAP_HOSTS=store
