--- a/default.env
+++ b/default.env
@@ -1,4 +1,16 @@
-MYSQL_ROOT_PASSWORD=change_me
 MYSQL_DATABASE=nextcloud
 MYSQL_USER=nextcloud
-MYSQL_PASSWORD=change_me
+MYSQL_PASSWORD=CHANGE_ME
+MYSQL_ROOT_PASSWORD=CHANGE_ME
+
+NEXTCLOUD_ADMIN_USER=nextcloud
+NEXTCLOUD_ADMIN_PASSWORD=CHANGE_ME
+
+#SMTP_HOST
+#SMTP_SECURE
+#SMTP_PORT
+#SMTP_AUTHTYPE
+#SMTP_NAME
+#SMTP_PASSWORD
+#MAIL_FROM_ADDRESS
+#MAIL_DOMAIN
