--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '2'
 
-# Copy default.env to .env and change passwords.
+# Copy default.env to environment.env and change passwords.
 
 services:
 
@@ -15,7 +15,7 @@ services:
     volumes:
       - ./local/nextcloud:/var/www/html
     env_file:
-      - .env
+      - environment.env
 
   db:
     container_name: tmi_cloud_data
@@ -25,7 +25,7 @@ services:
     volumes:
       - ./local/data:/var/lib/mysql
     env_file:
-      - .env
+      - environment.env
 
   admin:
     container_name: tmi_cloud_admin
