--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,12 +29,7 @@ services:
 
   admin:
     container_name: tmi_cloud_admin
-    image: osixia/phpldapadmin:0.9.0
-    restart: always
+    image: adminer
     ports:
-      - '41020:80'
-      - '41025:443'
-    depends_on:
-      - db
-    environment:
-      - PHPLDAPADMIN_LDAP_HOSTS=store
+      - 41010:8080
+    restart: always
