--- a/default.env
+++ b/default.env
@@ -1,10 +1,11 @@
+#db
 MYSQL_DATABASE=nextcloud
 MYSQL_USER=nextcloud
-MYSQL_PASSWORD=CHANGE_ME
-MYSQL_ROOT_PASSWORD=CHANGE_ME
+MYSQL_PASSWORD=change_me!
+MYSQL_ROOT_PASSWORD=change_me!
 
 NEXTCLOUD_ADMIN_USER=nextcloud
-NEXTCLOUD_ADMIN_PASSWORD=CHANGE_ME
+NEXTCLOUD_ADMIN_PASSWORD=change_me!
 
 #SMTP_HOST
 #SMTP_SECURE
