--- a/default.env
+++ b/default.env
@@ -1,12 +1,6 @@
-#db
-MYSQL_DATABASE=nextcloud
-MYSQL_USER=nextcloud
-MYSQL_PASSWORD=change_me!
-MYSQL_ROOT_PASSWORD=change_me!
-
+# App
 NEXTCLOUD_ADMIN_USER=nextcloud
 NEXTCLOUD_ADMIN_PASSWORD=change_me!
-
 #SMTP_HOST
 #SMTP_SECURE
 #SMTP_PORT
@@ -15,3 +9,10 @@ NEXTCLOUD_ADMIN_PASSWORD=change_me!
 #SMTP_PASSWORD
 #MAIL_FROM_ADDRESS
 #MAIL_DOMAIN
+
+#db
+MYSQL_DATABASE=nextcloud
+MYSQL_USER=nextcloud
+MYSQL_PASSWORD=change_me!
+MYSQL_ROOT_PASSWORD=change_me!
+MYSQL_HOST=db
