--- a/default.env
+++ b/default.env
@@ -1,10 +1,10 @@
 # App
 NEXTCLOUD_ADMIN_USER=nextcloud
-NEXTCLOUD_ADMIN_PASSWORD=change_me!
+NEXTCLOUD_ADMIN_PASSWORD=change_me
 
 #db
 MYSQL_HOST=db
 MYSQL_DATABASE=nextcloud
 MYSQL_USER=nextcloud
-MYSQL_PASSWORD=change_me!
-MYSQL_ROOT_PASSWORD=change_me!
+MYSQL_PASSWORD=change_me
+MYSQL_ROOT_PASSWORD=change_me
