--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,7 @@ services:
     depends_on:
       - db
     volumes:
-      - ./local/nextcloud/custom_apps:/var/www/html/custom_apps
-    env_file: environment.env
+      - ./local/nextcloud:/var/www/html
 
   db:
     container_name: tmi_cloud_data
